# GenshinDiscordBot

./: README.md  dotenvexample  index.php  keep_alive.py  main.py  pyproject.toml
docs/: index.html
templates/: index.html
